the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleserver-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleserver
  template:
    metadata:
      labels:
        app: simpleserver
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: simpleserver
          image: domantas231/the-project:1.12
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
