the_project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: simpleserver-svc
spec:
  type: NodePort
  selector:
    app: simpleserver
  ports:
    - name:
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 3000
